<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">
    <RelativeLayout
        android:background="@drawable/layout_shape"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:layout_margin="10dp"/>


    </RelativeLayout>


    <RelativeLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/header" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvMobile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/ivLogo"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:elevation="0dp"
            app:cardCornerRadius="25dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_baseline_email_24" />

                    <EditText
                        android:id="@+id/etMobile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="40dp"
                        android:singleLine="true"
                        android:maxEms="1"
                        android:imeOptions="actionNext"
                        android:background="@color/white"
                        android:hint="@string/enater_your_email"
                        android:textSize="15dp" />
             </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/cvMobile"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:elevation="0dp"
            app:cardCornerRadius="25dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_baseline_lock_24" />


                    <EditText
                        android:singleLine="true"
                        android:maxEms="1"
                        android:imeOptions="actionDone"
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="40dp"
                        android:background="@color/white"
                        android:hint="@string/password"
                        android:textSize="15dp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/cvPassword"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/blue"
            app:cardCornerRadius="25dp">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/blue"
                android:padding="10dp"
                android:background="@color/blue"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvsignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cvLogin"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cvLogin"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/forget_pass"
            android:textColor="@color/black" />

        <RelativeLayout
            android:id="@+id/rlOr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvsignUp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">



        </RelativeLayout>



    </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>