<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">
    <RelativeLayout
        android:background="@drawable/layout_shape"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <TextView
            android:textAlignment="center"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome !\nSign up with us to continue"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:visibility="gone"
            android:id="@+id/ivLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/doctor" />

        <TextView
            android:visibility="gone"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/tvMsg"
            android:gravity="center"
            android:layout_below="@id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvName"
            android:elevation="0dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/tvMsg"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            app:cardCornerRadius="25dp">

            <EditText
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:maxEms="1"
                android:singleLine="true"
                android:drawablePadding="10dp"
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:hint="@string/enter_your_name"
                android:padding="10dp"
                android:textSize="15dp" />

        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:id="@+id/cvEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/cvName"
            android:layout_marginLeft="20dp"
            android:elevation="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="25dp">

            <EditText
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:maxEms="1"
                android:singleLine="true"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:id="@+id/etEmail"
                android:background="@color/white"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:hint="@string/enater_your_email"
                android:drawablePadding="15dp"/>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cvMobile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/cvEmail"
            android:layout_marginLeft="20dp"
            android:elevation="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="25dp">

            <EditText
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:maxEms="1"
                android:singleLine="true"
                android:drawableLeft="@drawable/ic_baseline_phone_android_24"
                android:id="@+id/etMobile"
                android:background="@color/white"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:hint="@string/enter_your_mobile_no"
                android:drawablePadding="15dp"/>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cvPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/cvMobile"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:elevation="0dp"
            app:cardCornerRadius="25dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_baseline_lock_24" />


                    <EditText
                        android:imeOptions="actionDone"
                        android:maxLines="1"
                        android:maxEms="1"
                        android:singleLine="true"
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="40dp"
                        android:backgroundTint="@color/white"
                        android:hint="@string/password"
                        android:textSize="15dp"
                        android:background="@color/white"/>

               </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvMsgEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:layout_below="@id/cvPassword"
            android:textAlignment="center"
            android:text="Note : Please make sure the email id you enter is correct otherwise you will not rceived your booking confirmation on mail"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/tvMsgEmail"
            android:layout_marginLeft="20dp"
            android:elevation="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/blue"
            app:cardCornerRadius="25dp">

            <Button
                android:id="@+id/btnRegister"
                android:textSize="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:textColor="@color/white"
                android:text="Register"
                android:backgroundTint="@color/blue"
                android:textAlignment="center" />
        </androidx.cardview.widget.CardView>



    </RelativeLayout>

</RelativeLayout>